todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-test-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules: 
  - host: backend-express.3fbcdb2558914def9b14.southeastasia.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:  
          service:
            name: ytl-todo-backend-express
            port:
              number: 4001
